--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <script src="TreeUtility.js"></script>
     <script src="Visualizer.js"></script>
     <script>
-        const root = createBinaryTree();
-        drawTree(root);
+        let currElt = createBinaryTree();
+        drawTree(currElt);
     </script>
     
 </body>
