--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="TreeUtility.js"></script>
     <script src="Visualizer.js"></script>
     <script>
+        generateTree();
         let currElt = createBinaryTree();
         drawTree(currElt);
     </script>
