Made radio buttons functional

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <input type="text" id="elementTf" size="3">
         <label for="elementTf">Selected Element</label>
         <button id="btGenerate" onclick="generateTree()">regenerate</button>
-        <input type="radio" value="Binary Search Tree" id="bstSelector">
+        <input type="radio" value="Binary Search Tree" id="bstSelector" name="TreeTypeSelector" onclick="generateTree()">
         <label for="bstSelector">Binary Search Tree</label>
-        <input type="radio" value="Binary Tree" id="btSelector">
+        <input type="radio" value="Binary Tree" id="btSelector" name="TreeTypeSelector" onclick="generateTree()">
         <label for="btSelector">Binary Tree</label>     
         
     </div>
