Now we can remove bst node 2 childed
Now we can remove bst nodes which have 2 children and which are inner nodes. Also I improved the html so that when a label of a radio button is hit, that button is automatically being switched onto.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <label for="elementTf">Selected Element</label>
         <button id="btGenerate" onclick="generateTree(false)">regenerate</button>
         <input type="radio" value="Binary Search Tree" id="bstSelector1" name="TreeTypeSelector" onclick="treeGeneratorEventHandler()">
-        <label for="bstSelector">Binary Search Tree</label>
+        <label for="bstSelector1">Binary Search Tree</label>
         <input type="radio" value="Binary Tree" id="btSelector2" name="TreeTypeSelector" onclick="treeGeneratorEventHandler()">
-        <label for="btSelector">Binary Tree</label>     
+        <label for="btSelector2">Binary Tree</label>     
         
     </div>
     <div>
